--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   "author": "mcMickJuice",
   "main": "lib/index.js",
   "scripts": {
-    "test": "mocha tests --recursive"
+    "test": "jest"
   },
   "dependencies": {
     "requireindex": "~1.1.0"
   },
   "devDependencies": {
     "eslint": "~3.9.1",
-    "mocha": "^3.1.2"
+    "jest": "^20.0.4"
   },
   "engines": {
     "node": ">=0.10.0"
