--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
   "scripts": {
     "test": "jest"
   },
-  "dependencies": {
-    "requireindex": "~1.1.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "eslint": "~3.9.1",
     "jest": "^20.0.4"
